remove logic for sharing (absolete, wil be replaced by "workshop" appraoch)
