# src/main/java/org/dnd/controller/GroupController.java
@@ -5,8 +5,6 @@ import lombok.RequiredArgsConstructor;
 import org.dnd.api.MusicGroupsApi;
 import org.dnd.api.model.Group;
 import org.dnd.api.model.GroupRequest;
-import org.dnd.api.model.GroupShare;
-import org.dnd.api.model.GroupShareRequest;
 import org.dnd.service.GroupService;
 import org.dnd.service.ShareService;
 import org.springframework.http.ResponseEntity;
@@ -44,23 +42,6 @@ public class GroupController implements MusicGroupsApi {
     @Override
     public ResponseEntity<Group> updateGroup(Long groupId, GroupRequest groupRequest) {
         return ResponseEntity.ok(groupService.updateGroup(groupId, groupRequest));
-    }
-
-    @Override
-    public ResponseEntity<List<GroupShare>> listGroupShares(Long groupId) {
-        return ResponseEntity.ok(shareService.getGroupShares(groupId));
-    }
-
-    @Override
-    public ResponseEntity<GroupShare> shareGroup(Long groupId, GroupShareRequest groupShareRequest) {
-        shareService.shareGroup(groupId, groupShareRequest.getUserId());
-        return ResponseEntity.ok().build();
-    }
-
-    @Override
-    public ResponseEntity<Void> unshareGroup(Long groupId, Long userId) {
-        shareService.unshareGroup(groupId, userId);
-        return ResponseEntity.ok().build();
     }
 }
 
